examples/test/testpolicy12449.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12449
  namespace: namespace220
spec:
  podSelector:
    matchLabels:
      key28: value24
      key41: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value20
          key25: value6
          key9: value13
      podSelector:
        matchLabels:
          key38: value9
